2007-09-08  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-contact-list-view.c:
	* libempathy-gtk/empathy-contact-list-store.c: Make use of the search
	function to correctly find when typing in the contact list view.
	Fixes bug #472309 (Will Thompson, Xavier Claessens).

2007-09-08  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-log-window.c: Fix crash if there is no date 
	for a conversation. Fixes bug #473510.

2007-09-08  Xavier Claessens  <xclaesse@gmail.com>

	* python/pyempathygtk/pyempathygtk.override:
	* python/pyempathygtk/pyempathygtk.defs: Updated for new API.

2007-09-08  Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac: Bump libtelepathy depend to 0.0.57.

2007-09-08  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-chat-view.h:
	* libempathy-gtk/empathy-ui-utils.c:
	* libempathy-gtk/empathy-ui-utils.h:
	* libempathy-gtk/empathy-chat.c:
	* libempathy-gtk/empathy-smiley-manager.c:
	* libempathy-gtk/empathy-smiley-manager.h:
	* libempathy-gtk/Makefile.am:
	* libempathy-gtk/empathy-chat-window.c:
	* libempathy-gtk/empathy-chat-view.c: More dynamic smiley managment and
	more efficient algorithm to detect smileys in messages.
	Fixes bug #474167.

	* doc/: Updated

2007-08-31  Xavier Claessens  <xclaesse@gmail.com>

	* doc/libempathy-gtk/Makefile.am:
	* doc/libempathy-gtk/tmpl/empathy-preferences.sgml:
	* doc/libempathy-gtk/tmpl/empathy-images.sgml:
	* doc/libempathy/libempathy.types:
	* doc/libempathy/libempathy-docs.sgml:
	* doc/libempathy/Makefile.am:
	* doc/libempathy/tmpl/empathy-tp-group.sgml:
	* doc/libempathy/tmpl/empathy-avatar.sgml:
	* doc/libempathy/tmpl/empathy-contact.sgml:
	* doc/libempathy/tmpl/empathy-contact-list.sgml: Updated.

2007-08-30  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-contact-factory.c: Don't use deprecated
	RequestAvatar method.

2007-08-30  Xavier Claessens  <xclaesse@gmail.com>

	* python/pyempathy/pyempathy.defs: